--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,6 @@ section {
 	max-width: 80%;
 	margin-right: auto;
 	margin-left: auto;
-	/* border: 1px solid red; */
 }
 
 .container-fluid {
@@ -208,22 +207,22 @@ hr {
 
 .search {
     position: absolute;
-	top: -10px;
-    right: 55px;
+    top: 25px;
+    right: 36px;
     padding: 10px;
-	transition: opacity .5s linear;
-    opacity: 0; 
+    transition: opacity .5s linear;
+    opacity: 0;
     height: 0;
     overflow: hidden;
 }
-.menu-item > .sub:hover .search{
+.menu-item > .sub:hover .search, .menu-item > .sub:active .search{
 	height: auto;
     opacity: 1;
 }
 
 input[type="search"] {
     padding: 10px;
-    width: 75em;
+    width: 23em;
     border: 1px solid #dad4d4;
 }
 
@@ -237,6 +236,7 @@ input[type="search"] {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+	padding: 0 10px
 }
 .banner .col-2{
 	align-items: center;
@@ -252,8 +252,7 @@ input[type="search"] {
 	background-image: url(../img/) no-repeat;
 }
 .banner-img img {
-	width: 475px;
-    height: 475px;
+	width: 90%;
     position: relative;
     left: 100px;
 }
@@ -272,58 +271,59 @@ input[type="search"] {
 .brand-logo {
     display: flex;
     align-items: center;
-	border-top: 1px solid;
-	border-bottom: 1px solid;
+    border-top: 1px solid #d6c4c4;
+    border-bottom: 1px solid #d6c4c4;
 }
-
 
 .brand-logo li{
 	padding: 0 20px 0 0;
 }
-
+.brand-logo li img {
+    padding: 10px;
+}
 
 
 /* =================
-    Popular Section
+  Popular  Product 
 =================== */
-
 #popular .bg-white {
 	padding-top: 12px;
 }
-
+.title {
+    padding: 5px 0 15px;
+    font-size: 25px;
+}
 .populars {
 	display: flex;
 	flex-wrap: wrap;
 	flex-direction: row;
 }
-
-.popular {
-	padding: 10px 0;
+.products {
+    background: #f6f6f6;
+    padding: 0px 10px 10px;
+    box-shadow: 8px 1px 19px #e8e8e8;
 }
 
-.popular .thumbnail {
-	width: 95%;
+.product {
+    margin-top: 10px;
+    padding: 15px;
+    background: #fff;
+	border-radius: 8px;
+    box-shadow: 8px 2px 30px #c6c1c1;
 }
 
-.popular .thumbnail img {
-	height: 200px;
-	border-radius: 20px;
+.product .thumbnail img {
+	height: 260px;
+	border-radius: 8px;
 }
 
-.popular-content h2 {
+.product-content h2 {
 	font-size: 20px;
 }
 
-.popular-content p {
+.product-content p {
 	font-size: 14px;
 	color: #ED6B4F;
-}
-
-.popular-extra {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	padding: 0 10px 0 0;
 }
 
 .time {
@@ -480,7 +480,7 @@ input[type="search"] {
 		opacity: 0;
 		transition: opacity .5s linear;	
 	}
-	.main-menu:hover .menu-item{
+	.main-menu:hover .menu-item, .main-menu:active .menu-item{
 		opacity: 1;
 	}
 	.main-menu .menu-item li {
@@ -495,13 +495,38 @@ input[type="search"] {
 		padding: 10px;
 		width: 21.5em;
 		border: 1px solid #dad4d4;
+		position: relative;
+		top: -10px;
 	}
-	/* popular Section */
-	.popular .thumbnail img, .blog .thumbnail img {
+	/* Banner Section */
+	.banner .col-2 {
+		display: flex;
+		flex-direction: column;
+		flex-wrap: nowrap;
+	}
+	.banner-content h1 {
+		font-size: 30px;
+	}
+	.banner-img {
+		position: relative;
+		top: -230px;
+	}
+	.banner-img img {
+		width: 100%;
+		left: 0;
+	}
+	.banner-content {
+		position: relative;
+		top: 310px;
+	}
+	/* popular Product */
+	.product .thumbnail img{
 		height: 140px;
 	}
-	.star,
-	.time {
+	.product:last-child{
+		display: none;
+	}
+	.star {
 		font-size: 12px;
 	}
 	/* footer */
