--- a/css/style.css
+++ b/css/style.css
@@ -12,14 +12,14 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Varela+Round&display=swap');
 * {
-	margin: 0;
-	padding: 0;
-	outline: 0;
+  margin: 0;
+  padding: 0;
+  outline: 0;
 }
 
 body {
-	font-family: 'Poppins', sans-serif;
-	background: #FFFFFF;
+  font-family: 'Poppins', sans-serif;
+  background: #FFFFFF;
 }
 
 
@@ -28,562 +28,677 @@ body {
 ===================== */
 
 section {
-	padding: 0 0 20px 0;
+  padding: 0 0 20px 0;
 }
 
 .container {
-	max-width: 80%;
-	margin-right: auto;
-	margin-left: auto;
+  max-width: 80%;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .container-fluid {
-	max-width: 90%;
-	margin-right: auto;
-	margin-left: auto;
+  max-width: 90%;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .row {
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: row;
-	align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-items: center;
 }
 
 .col {
-	display: grid;
-	grid-template-columns: auto;
-	grid-gap: 10px;
+  display: grid;
+  grid-template-columns: auto;
+  grid-gap: 10px;
 }
 
 .col-2 {
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	grid-gap: 10px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 10px;
 }
 
 .col-3 {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	grid-gap: 10px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
 }
 
 .col-4 {
-	display: grid;
-	grid-template-columns: repeat(4, 1fr);
-	grid-gap: 10px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 10px;
 }
 
 .col-5 {
-	display: grid;
-	grid-template-columns: repeat(5, 1fr);
-	grid-gap: 10px;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 10px;
 }
 
 .col-6 {
-	display: grid;
-	grid-template-columns: repeat(6, 1fr);
-	grid-gap: 10px;
-	justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-gap: 10px;
+  justify-content: center;
 }
 
-.center{
-	justify-content: center;
+.center {
+  justify-content: center;
 }
-.text-center{
-	text-align: center;
+
+.right {
+  float: right;
 }
+
+.see-more {
+  color: #E02C6D;
+  font-weight: 600;
+}
+
+.text-center {
+  text-align: center;
+}
+
+
 /*common media query */
 
 @media only screen and (max-width: 375px) {
-	.col,
-	.col-2,
-	.col-3,
-	.col-4,
-	.col-5,
-	.col-6 {
-		grid-template-columns: repeat(1, 1fr);
-	}
+  .container {
+    max-width: 90%;
+  }
+  .container-fluid {
+    max-width: 100%;
+  }
+  .col,
+  .col-2,
+  .col-3,
+  .col-4,
+  .col-5,
+  .col-6 {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 @media only screen and (min-width: 376px) and (max-width: 767px) {
-	.col,
-	.col-2,
-	.col-3,
-	.col-4,
-	.col-5,
-	.col-6 {
-		grid-template-columns: repeat(2, 1fr);
-	}
+  .container {
+    max-width: 90%;
+  }
+  .container-fluid {
+    max-width: 100%;
+  }
+  .col,
+  .col-2,
+  .col-3,
+  .col-4,
+  .col-5,
+  .col-6 {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 img {
-	width: 100%;
-	height: auto;
+  width: 100%;
+  height: auto;
 }
 
 a {
-	text-decoration: none;
+  text-decoration: none;
 }
 
 li {
-	list-style: none;
+  list-style: none;
 }
 
 .bg-white {
-	background: #ffffff;
-	padding: 25px 20px;
+  background: #ffffff;
+  padding: 25px 20px;
 }
 
 hr {
-	border: 1px solid #D1D1D1;
+  border: 1px solid #D1D1D1;
 }
 
 .clear-both {
-	clear: both;
+  clear: both;
 }
 
 .btn {
-    padding: 8px 25px;
-    border-radius: 20px;
-    position: relative;
-    top: 10px;
+  padding: 8px 25px;
+  border-radius: 20px;
+  position: relative;
+  top: 10px;
 }
 
 .btn-buy {
-    background: #E02C6D;
-    color: #fff;
+  background: #E02C6D;
+  color: #fff;
 }
+
+.submit {
+  background: #EAC407;
+  border: 1px solid #EAC407;
+  margin-left: 10px;
+}
+
 
 /* =================
     Header Part
 =================== */
 
 #header {
-    height: 60px;
-    padding: 20px 0 0 0;
-    border-bottom: 2px solid #f4f4f4;
-}
-.menu-item li .fa-cart-plus{
-	display: block;
-}
-.logo h2 a{
-	color: #3A3A3A;
+  height: 60px;
+  padding: 20px 0 0 0;
+  border-bottom: 2px solid #f4f4f4;
 }
 
-.logo .fa-cart-plus{
-	display: none;
+.menu-item li .fa-cart-plus {
+  display: block;
 }
+
+.logo h2 a {
+  color: #3A3A3A;
+}
+
+.logo .fa-cart-plus {
+  display: none;
+}
+
 .bars {
-    display: none;
+  display: none;
 }
+
 .main-menu {
-	display: grid;
-	grid-template-columns: 300px 1fr;
+  display: grid;
+  grid-template-columns: 300px 1fr;
 }
 
 .logo img {
-	width: 35%;
-	padding: 15px 0 0 0;
+  width: 35%;
+  padding: 15px 0 0 0;
 }
 
 .main-menu .menu-item {
-    display: flex;
-	flex-direction: row;
-    justify-content: space-evenly;
-	align-items: center;
-    position: relative;
-    left: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  position: relative;
+  left: 100%;
 }
 
 .main-menu .menu-item li {
-	padding: 5px 10px;
-	font-size: 16px;
+  padding: 5px 10px;
+  font-size: 16px;
 }
 
-.main-menu > .menu-item > li:hover a {
-    border-bottom: 2px solid #dedede;
+.main-menu>.menu-item>li:hover a {
+  border-bottom: 2px solid #dedede;
 }
 
-.main-menu .menu-item li a, .brand a {
-	color: #000;
+.main-menu .menu-item li a,
+.brand a {
+  color: #000;
 }
 
 .search {
-    position: absolute;
-    top: 25px;
-    right: 36px;
-    padding: 10px;
-    transition: opacity .5s linear;
-    opacity: 0;
-    height: 0;
-    overflow: hidden;
+  position: absolute;
+  top: 25px;
+  right: 36px;
+  padding: 10px;
+  transition: opacity .5s linear;
+  opacity: 0;
+  height: 0;
+  overflow: hidden;
 }
-.menu-item > .sub:hover .search, .menu-item > .sub:active .search{
-	height: auto;
-    opacity: 1;
+
+.menu-item>.sub:hover .search,
+.menu-item>.sub:active .search {
+  height: auto;
+  opacity: 1;
 }
 
 input[type="search"] {
-    padding: 10px;
-    width: 23em;
-    border: 1px solid #dad4d4;
+  padding: 10px;
+  width: 23em;
+  border: 1px solid #dad4d4;
+}
+
+.fal.fa-cart-plus {
+  font-size: 20px;
 }
 
 
 /* =================
     Banner Section
 =================== */
+
 .banner {
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-	padding: 0 10px
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0 10px
 }
-.banner .col-2{
-	align-items: center;
+
+.banner .col-2 {
+  align-items: center;
 }
+
 .banner-content h1 {
-    font-size: 50px;
-    line-height: 1.2;
+  font-size: 50px;
+  line-height: 1.2;
 }
+
 .banner-content p {
-    padding: 15px 0;
+  padding: 15px 0;
 }
-.banner-img{
-	background-image: url(../img/) no-repeat;
-}
+
+/* .banner-img {
+    border: 1px solid #8080801f;
+    border-radius: 50%;
+    padding: 16px;
+} */
+
 .banner-img img {
-	width: 90%;
-    position: relative;
-    left: 100px;
+  width: 90%;
+  position: relative;
+  left: 100px;
 }
+
 
 /* =================
     Brand Section
 =================== */
+
 .brand {
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .brand-logo {
-    display: flex;
-    align-items: center;
-    border-top: 1px solid #d6c4c4;
-    border-bottom: 1px solid #d6c4c4;
+  display: flex;
+  align-items: center;
+  border-top: 1px solid #d6c4c4;
+  border-bottom: 1px solid #d6c4c4;
 }
 
-.brand-logo li{
-	padding: 0 20px 0 0;
+.brand-logo li {
+  padding: 0 20px 0 0;
 }
+
 .brand-logo li img {
-    padding: 10px;
+  padding: 10px;
 }
 
 
 /* =================
   Popular  Product 
 =================== */
+
 #popular .bg-white {
-	padding-top: 12px;
+  padding-top: 12px;
 }
+
 .title {
-    padding: 5px 0 15px;
-    font-size: 25px;
+  padding: 5px 0 15px;
+  font-size: 25px;
 }
+
 .populars {
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: row;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
 }
+
 .products {
-    background: #f6f6f6;
-    padding: 0px 10px 10px;
-    box-shadow: 8px 1px 19px #e8e8e8;
+  background: #f6f6f6;
+  padding: 0px 10px 10px;
+  box-shadow: 8px 1px 19px #e8e8e8;
 }
 
 .product {
-    margin-top: 10px;
-    padding: 15px;
-    background: #fff;
-	border-radius: 8px;
-    box-shadow: 8px 2px 30px #c6c1c1;
+  margin-top: 10px;
+  padding: 15px;
+  background: #fff;
+  border-radius: 5px;
+  box-shadow: 8px 2px 30px #c6c1c1;
 }
 
 .product .thumbnail img {
-	height: 260px;
-	border-radius: 8px;
+  height: 260px;
+  border-radius: 8px;
 }
 
 .product-content h2 {
-	font-size: 20px;
+  font-size: 20px;
 }
 
 .product-content p {
-	font-size: 14px;
-	color: #ED6B4F;
+  font-size: 14px;
+  color: #ED6B4F;
 }
 
 .time {
-	background: #FFE4E8;
-	padding: 0 3px;
-	border-radius: 5px;
+  background: #FFE4E8;
+  padding: 0 3px;
+  border-radius: 5px;
 }
 
 .fa.fa-star {
-	color: #FFC014;
+  color: #FFC014;
 }
 
 .star .fal {
-	color: #A2A2A2;
+  color: #A2A2A2;
 }
 
 .time span,
 .time i {
-	color: #FF4A60;
+  color: #FF4A60;
 }
 
 
 /* =================
     Get In  Touch
 =================== */
-.form-group {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+
+.contact {
+  background: #000;
+  padding: 20px 5px;
 }
 
-.message input[type="text"], .message input[type="email"] {
-    padding: 8px;
-    width: 100%;
-    margin: 10px 10px;
+#contact .title h2 {
+  color: #EAC407;
 }
-textarea{
-    margin: 10px;
-    padding: 10px;
+
+.fa-envelope,
+.fa-phone-alt {
+  color: #EAC407;
 }
+
+.subscribe {
+  color: #fff;
+  padding-left: 10px;
+}
+
+.contat-mail,
+.contat-call {
+  padding-top: 10px;
+  font-size: 12px;
+}
+
+.form-group {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.message input[type="text"],
+.message input[type="email"] {
+  padding: 8px;
+  width: 17em;
+  margin: 10px 10px;
+}
+
+.message p {
+  color: #fff;
+  font-size: 12px;
+  margin-left: 10px;
+}
+
+textarea {
+  margin: 10px;
+  padding: 10px;
+  width: 92%;
+  height: 160px;
+}
+
 
 /* =================
     Footer Part
 =================== */
 
 #footer {
-	background: #0A0826;
-	padding: 15px 0 0 0;
+  background: #0A0826;
+  padding: 15px 0 0 0;
+  text-align: center;
 }
+
 .footer h3 {
-    color: #fff;
+  color: #fff;
 }
-.footer p{
-	color: #A5A6B2;
-	font-size: 12px;
+
+.footer p {
+  color: #A5A6B2;
+  font-size: 12px;
 }
+
 .social-menu {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.footer-link .footer-menu {
-	float: right;
-}
-
-.footer-menu li {
-	font-size: 20px;
-}
-
-.footer-menu li a {
-	color: #fff;
-	font-size: 14px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .social-menu li {
-	padding: 2px 10px 0 0;
+  padding: 2px 10px 0 0;
 }
 
 .social-menu li a {
-	font-size: 22px;
-	color: #FFE4E8;
+  font-size: 22px;
+  color: #FFE4E8;
 }
 
 .social-menu .fab {
-    border-radius: 5px;
-    padding: 5px;
+  border-radius: 5px;
+  padding: 5px;
 }
 
-.fa-facebook, .fa-twitter, .fa-whatsapp, .fa-instagram {
-	background: #636275;
+.fa-facebook,
+.fa-twitter,
+.fa-whatsapp,
+.fa-instagram {
+  background: #636275;
 }
 
 .copywright {
-    text-align: center;
+  text-align: center;
 }
+
 
 /* ========================
         Media Query
 ========================== */
 
 
-/* Very Small Device */
-
-@media only screen and (max-width: 280px) {
-
-}
-
-/* Small Mobile Device */
-
-@media  only screen and (max-width: 375px) {
-	.popular .thumbnail img, .blog .thumbnail img {
-		height: 180px;
-	}
-
-}
-
-
 /*Mobile Device */
 
 @media only screen and (max-width: 767px) {
-	/* Common */
-
-	.main-menu .menu-item li,
-	.popular-content h2 {
-		font-size: 15px;
-	}
-	/* Header */
-	.menu-item li .fa-cart-plus{
-		display: none;
-	}
-	.logo .fa-cart-plus{
-		display: block;
-	}
-	.bars {
-		display: block;
-	}
-	span.bars {
-		float: right;
-		position: relative;
-		right: 88%;
-		font-size: 30px;
-	}
-	.logo {
-		display: flex;
-		justify-content: space-between;
-		flex-direction: row;
-		align-items: center;
-	}
-	.logo h2 {
-		font-size: 18px;
-	}
-	.main-menu {
-		display: flex;
-		flex-direction: column;
-	}
-	.main-menu .menu-item {
-		display: flex;
-		flex-direction: grid;
-		position: relative;
-		left: 15px;
-		background: #ffff;
-	}
-	.menu-item {
-		opacity: 0;
-		transition: opacity .5s linear;	
-	}
-	.main-menu:hover .menu-item, .main-menu:active .menu-item{
-		opacity: 1;
-	}
-	.main-menu .menu-item li {
-		padding: 2px 16px 0 0;
-		font-size: 14px;
-	}
-	.search {
-		top: 24px;
-    	right: 30px;
-	}
-	input[type="search"] {
-		padding: 10px;
-		width: 21.5em;
-		border: 1px solid #dad4d4;
-		position: relative;
-		top: -10px;
-	}
-	/* Banner Section */
-	.banner .col-2 {
-		display: flex;
-		flex-direction: column;
-		flex-wrap: nowrap;
-	}
-	.banner-content h1 {
-		font-size: 30px;
-	}
-	.banner-img {
-		position: relative;
-		top: -230px;
-	}
-	.banner-img img {
-		width: 100%;
-		left: 0;
-	}
-	.banner-content {
-		position: relative;
-		top: 310px;
-	}
-	/* Brand Section*/
-	#brand {
-		margin-top: 40px;
-	}
-	.brand-logo li {
-		padding: 0 5px 0 0;
-	}
-	.brand-logo li img {
-		padding: 10px 20px;
-	}
-	/* popular Product */
-	#popular .col {
-		display: flex;
-	}
-	.title {
-		padding: 0 0 15px;
-		font-size: 18px;
-	}
-	.product .thumbnail img{
-		height: 140px;
-	}
-	.product:last-child{
-		display: none;
-	}
-	.star {
-		font-size: 12px;
-	}
-	/* footer */
-	#footer .col-3 {
-		display: flex;
-		flex-direction: row;
-		flex-wrap: wrap;
-	}
-	.footer-logo img {
-		width: 25%;
-	}
-	.footer-menu li {
-		font-size: 15px;
-	}
-	.social-menu {
-		justify-content: left;
-	}
-	.copywright{
-		text-align: left;
-	}
+  /* Common */
+  a,
+  p {
+    font-size: 12px
+  }
+  .main-menu .menu-item li,
+  .popular-content h2 {
+    font-size: 15px;
+  }
+  /* Header */
+  .menu-item li .fa-cart-plus {
+    display: none;
+  }
+  .logo .fa-cart-plus {
+    display: block;
+  }
+  .bars {
+    display: block;
+  }
+  span.bars {
+    float: right;
+    position: relative;
+    right: 88%;
+    font-size: 30px;
+  }
+  .logo {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+  }
+  .logo h2 {
+    font-size: 18px;
+  }
+  .main-menu {
+    display: flex;
+    flex-direction: column;
+  }
+  .main-menu .menu-item {
+    display: flex;
+    flex-direction: grid;
+    position: relative;
+    left: 15px;
+    background: #ffff;
+  }
+  .menu-item {
+    opacity: 0;
+    transition: opacity .5s linear;
+  }
+  .main-menu:hover .menu-item,
+  .main-menu:active .menu-item {
+    opacity: 1;
+  }
+  .main-menu .menu-item li {
+    padding: 2px 16px 0 0;
+    font-size: 14px;
+  }
+  .search {
+    top: 24px;
+    right: 30px;
+  }
+  input[type="search"] {
+    padding: 10px;
+    width: 21.5em;
+    border: 1px solid #dad4d4;
+    position: relative;
+    top: -10px;
+  }
+  /* Banner Section */
+  .banner .col-2 {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+  .banner-content h1 {
+    font-size: 30px;
+  }
+  .banner-img {
+    position: relative;
+    top: -220px;
+    z-index: -1;
+  }
+  .banner-img img {
+    width: 100%;
+    left: 0;
+    height: 300px;
+    top: 42px;
+  }
+  .banner-content {
+    position: relative;
+    top: 310px;
+  }
+  /* Brand Section*/
+  #brand {
+    margin-top: 40px;
+  }
+  .brand-logo li {
+    padding: 0 10px 0 0;
+  }
+  .brand-logo li img {
+    padding: 10px 20px;
+  }
+  /* popular Product */
+  #popular .col {
+    display: flex;
+  }
+  .title {
+    padding: 0 0 15px;
+    font-size: 18px;
+  }
+  .product .thumbnail img {
+    height: 140px;
+  }
+  .product:last-child {
+    display: none;
+  }
+  .star {
+    font-size: 12px;
+  }
+  /* Contact */
+  .form-group {
+    flex-direction: column;
+  }
+  .message input[type="text"],
+  .message input[type="email"] {
+    width: 77%;
+  }
+  textarea {
+    margin: 0;
+    padding: 0;
+    width: 88%;
+    height: 160px;
+    position: relative;
+    left: 9px;
+  }
+  /* footer */
+  .social-menu {
+    justify-content: left;
+  }
+  .footer,
+  .copywright {
+    text-align: left;
+  }
 }
 
 
-/* Ipad Device */
+/* Small Mobile Device */
 
-@media only screen and (min-width: 768px) and (max-width: 992px) {
+@media only screen and (max-width: 375px) {
+  .main-menu .menu-item li {
+    font-size: 13px;
+  }
+  .search {
+    right: 20px;
+  }
+  input[type="search"] {
+    width: 19.5em;
+  }
+  .product .thumbnail img {
+    height: 200px;
+  }
+  .form-group {
+    margin-left: -6%;
+  }
+  textarea {
+    width: 87%;
+  }
+  .btn {
+    left: 10px;
+  }
+}
 
+
+/* Very Small Device */
+
+@media only screen and (max-width: 280px) {
+  .main-menu .menu-item li {
+    font-size: 12px;
+  }
 }
