--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,8 @@ hr {
 
 .logo h2 a {
   color: #3A3A3A;
+  font-size: 25px;
+  text-transform: uppercase;
 }
 
 .logo .fa-cart-plus {
@@ -264,7 +266,7 @@ hr {
 
 input[type="search"] {
   padding: 10px;
-  width: 23em;
+  width: 24.5em;
   border: 1px solid #dad4d4;
 }
 
@@ -552,9 +554,6 @@ textarea {
     justify-content: space-between;
     flex-direction: row;
     align-items: center;
-  }
-  .logo h2 {
-    font-size: 18px;
   }
   .main-menu {
     display: flex;
